--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,7 +6,7 @@
 .c-bg {
   width: 20px;
   height: 100%;
-  background-color: #59b256;
+  background-color: #4682b4;
   position: absolute;
 }
 
@@ -72,14 +72,14 @@ textarea {
 button {
   border: none;
   padding: 15px;
-  background-color: #59b256;
+  background-color: #4682b4;
   color: white;
   font-weight: 500;
   cursor: pointer;
 }
 
 .c-thanks {
-  margin-left: 20px;
+  margin-top: 20px;
 }
 
 @media screen and (max-width: 480px) {
