--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -9,7 +9,7 @@
 
 .p-browser {
   height: 20px;
-  background-color: #333;
+  background-color: rgb(235, 234, 233);
   display: flex;
   align-items: center;
   position: sticky;
